[package]
name = "slpm-file"
version = "0.1.0"
edition = "2018"
authors = ["FlareFlo"]
description = "The official tools for the open .slpm file-format made for the StainLessPasswordManager"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
argon2 = "0.3.1"
rand = "0.8.4"
pad = "0.1.6"
chrono = "0.4.19"
